Actual Project Committed

--- a/Project_Portfolio/Project_Portfolio/Project_Portfolio.csproj
+++ b/Project_Portfolio/Project_Portfolio/Project_Portfolio.csproj
@@ -198,6 +198,8 @@
     <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Account\Success.cshtml" />
+    <Content Include="Views\Account\Registration.cshtml" />
+    <Content Include="Views\Account\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
